small changes prior to fall semester

--- a/BradfordHill.Rmd
+++ b/BradfordHill.Rmd
@@ -104,7 +104,7 @@ Finally, let me note a few things. First, the Bradford Hill criteria are all abo
 
 Related to this is that we are talking about observations of things that _have_ happened, not our expectations of what is likely to happen. That is called a prediction, and it is not (yet) data or evidence. 
 
-Similarly, it is important to remember that we are talking about _causal_ relationships, as in a change in $x$ _causes_ a change in $y$. Clouds and lightning are clearly associated, but it wouldn't be right to say that clouds _cause_ lightening. Sure they're involved, but it's really forces working within clouds that lead to lightening. It can be very helpful to draw out the causal diagram you are considering (e.g., $x \rightarrow z \rightarrow y$) to keep track of what you think _causes_ what else (e.g., a change in $x$ causes a change in $z$, which causes a change in $y$), and how it is thought to lead to the response (e.g., changes in $x$ cause changes in $y$ _through its influence_ on $z$, but not directly). 
+Similarly, it is important to remember that we are talking about _causal_ relationships, as in a change in $x$ _causes_ a change in $y$. Clouds and lightning are clearly associated, but it wouldn't be right to say that clouds _cause_ lightening. Sure they're involved, but it's really the forces at work within clouds that lead to lightening. It can be very helpful to draw out the causal diagram you are considering (e.g., $x \rightarrow z \rightarrow y$) to keep track of what you think _causes_ what else (e.g., a change in $x$ causes a change in $z$, which causes a change in $y$), and how it is thought to lead to the response (e.g., changes in $x$ cause changes in $y$ _through its influence_ on $z$, but not directly). 
 
 Perhaps most importantly, we are using these "criteria" to see what each line of evidence brings to the table in terms support for or against the causal nature of the relationship. That is, it helps us see that we have a lot of one sort of evidence, but very little of others, or, alternatively, that we might have different stories emerging out of different sorts of evidence. The BHC help us make sense of the evidence we can bring to bear about the causal relationship. It should not be viewed as a checklist or a simple scoring system, but as a tool to help us think through what we do and do not know and why.
 
