Separated limting reagents & temperature

--- a/ChemicalReactions.Rmd
+++ b/ChemicalReactions.Rmd
@@ -32,11 +32,31 @@ library(scales) # for prettier axis labels
 theme_set(theme_minimal())
 ```
 
+We have introduced the idea that we can think of life as a series (or symphony) of interlocking chemical reactions, which means that what we have learned about chemistry can teach us a few things about ecology. Let me first review the reactants side of things.
 
-Every living thing is made of chemicals (which are made up of atoms^[The major ones, some 98% of living matter, are  C, H, N, O, P, and S, or CHNOPS. But smaller amounts of so-called micronutrients are also needed, depending on the organisms. These include : Na, Mg, K, Ca, Cl, Mn, Fe, Cu, Zi, I, K, Fe. Google them to find out their various roles. They are quite interesting!]). Perhaps more to the point, we are made of chemical reactions, endless chains of chemical reactions where the product of one is a reactant to another. You have likely seen the citric acid or Krebs cycle, photosynthesis, protein synthesis, or any number of other reactions involved in life. That stuff^[Well, not photosynthesis! I mean, if it, please let me know and we can write a major Science paper!] is happening inside of us right now, as I write and you read. These reactions are happening all the time. That, in a very real sense, is life: self-perpetuating, self-organizing chemical reactions. We will not worry ourselves with the details---this is a general ecology class after all, and I always forget the details---but just this basic idea can yield some interesting perspectives.
+# Rates are controlled by the most-limiting reagent
+
+One way to speed a chemical reaction is to increase the concentration of the reactants. This is also true, to an extent, in biochemical reactions. Or more to the point, if a reactant is missing, it slows the rate of the reaction^[A plant cannot fix CO~2~ with photosynthesis if there is no more CO~2~!]. But what is important to remember about biochemical reactions is that reactions are chained together such that the product of one is the reactant of another. So slowing down one reaction can slow down others^[If nitrogen is limiting, it slows down production of amino acids, which slows down protein synthesis, which slows down growth or repair of myriad cell structures, and so on.]. 
+
+```{r, fig.margin = TRUE}
+knitr::include_graphics("liebigsbarrel.jpg")
+```
+
+What is important to remember is the rate of a reaction is limited by the reactant that is in the most limited supply. What this means is that if nitrogen is limiting, adding more phosphorus is unlikely to speed up the reaction(s). But it also means that adding nitrogen speeds up the reaction only until something else becomes limiting. This is often called Liebig's law of the minimum^[A prime example of [Stigler's law of eponymy](https://en.wikipedia.org/wiki/Stigler%27s_law_of_eponymy).] or Liebig's barrel, because, like the water level in a barrel is limited by the shortest stave, the growth of a plant or animal is limited by the nutrient in shortest supply. Me, I like to think about this as the law of the movie theater popcorn. Sure, a small popcorn is lovely and a medium increases my happiness, but I never get the super large size, even if it is just 50 cents more, because I know my happiness is no longer limited by popcorn, but probably by my need for water given all the salty popcorn I just ate!
+In any case, given this insight is it any surprise that one line of defense against invading pathogenic bacteria is for our bodies to sequester nutrients that likely limit bacterial growth?
+
+## An organism's stoichiometry can help explain where and when it flourishes 
+
+If we follow Liebig's law of the minimum a short step further, we might note that fertilizers, for instance, might be most effective if they included several of the commonly limiting nutrients. And they might be more effective still if they contained the right _ratios_ of these limiting nutrients. Why is this? Well in a word, stoichiometry.  In more words, chemical reactions use nutrients in particular ratios. For instance, photosynthesis takes six CO~2~ molecules and 12 H~2~O molecules, plus some light and fancy enzymes, to make one sugar (C~6~H~2~)~6~) and some oxygen and water. That is more O's than C's in this particular reaction. Similarly, while amino acids require nitrogen, they have a lot more carbon and oxygen atoms in them. 
+
+More broadly, we can think about _ecological_ stoichiometry, where we consider what the whole organism needs and uses, as opposed to particular chemical reactions. We need nitrogen not just for amino acids, but also RNA and DNA. We need phosphorus in our nucleic acids, but also phospholipids, and ATP, along with structural elements in bones. We can sort of set aside the issue of where the N's and P's go and just think about how many N's a body needs relative to the P's, and if we get this ratio right we tend to maximize the rates of the organisms's chemical reactions. 
+
+This ecological stoichiometry is a relatively new idea and undertaking, and it is not entirely clear how far we can run with it, but there are some very interesting places where it clearly works. For instance, rapid growth requires the production of a lot of nucleic acids, ATPs, and ribosomes, which require a lot of phosphorus. Thus, we find, at least in some settings like zooplankton, that fast-growing species and life stages tend to grow best with more P than N (or, equivalently, lower N:P ratios) than slower-growing species and stages. Indeed, lab experiments demonstrated that one could manipulate the relative dominance of copepods (cylopoid crustrations) versus _Daphnia_ (cladocerans) by changing the elemental ratios in the food they were provided. The ideas have been promoted in all sorts of areas (e.g., cancer research), but again, it is not always clear that what is true at the small scale is necessarily important at the large.
+
+Now, the new stuff!
 
 # Biology is temperature-dependent
-One way to increase the rate of a chemical reaction is to add heat. With heat, chemicals bounce around faster and so come into contact more frequently^[Hmm...is this a useful analogy with susceptible and infected hosts interacting to cause more infections?]. The added energy also speeds reactions by providing the activation energy required in endothermic and even some ectothermic reactions. All of which is to say, reactions go faster at warmer temperatures. What are the consequences? Let's consider two:
+In addition to adding more of a limiting reactant, one way to increase the rate of a chemical reaction is to add heat. With heat, chemicals bounce around faster and so come into contact more frequently^[Hmm...is this a useful analogy with susceptible and infected hosts interacting to cause more infections? Let's revisit this later!]. The added energy also speeds reactions by providing the activation energy required in endothermic and even some ectothermic reactions. All of which is to say, reactions go faster at warmer temperatures. What are the consequences? Let's consider two:
 
 ## Thermal optima
 ```{r, fig.margin=TRUE,}
@@ -110,23 +130,4 @@ ggplot(df, aes(Speed, Time)) +
 This analogy is important for another reason, because it helps us notice that we do not need to drive (or develop) at a constant rate, but rather accumulate speed (or temperature) and thus miles driven (or steps in development) to get to our destination. We might drive at 60 for a bit while we get through Colfax and then floor it on I-90 until we get snarled in traffic near Seattle. Similarly, development might be speeding along on warm days and going slower on cools ones. In biology we call this the "degree-day" model of development^[Sort of like the speed-hour model of travel], where we can estimate the accumulation of temperature as a proxy for the accumulation of development to some developmental milestone. 
 
 This sort of model is very common in farming, but is also very useful for thinking vector ecology. Ticks and mosquitoes take a certain number of degree days^[Often above some threshold temperature where there is no development. Zero Celsius is pretty cold, after all!] to complete their development into the next developmental stage, lay eggs, or even digest a bloodmeal. What's cool about this is that we can figure out how many generations we might have in an area as a function of that area's typical temperatures. It can even explain why, say, ticks are not found too far north: it is simply too cold for them to complete their development before they would run out of energy or freeze to death. 
-
-# Rates are controlled by the most-limiting reagent
-
-In addition to increasing temperatures or adding catalysts (e.g., enzymes), one way to speed a chemical reaction is to increase the concentration of the reactants. This is also true, to an extent, in biochemical reactions. Or more to the point, if a reactant is missing, it slows the rate of the reaction^[A plant cannot fix CO~2~ with photosynthesis if there is no more CO~2~!]. But what is important to remember about biochemical reactions is that reactions are chained together such that the product of one is the reactant of another. So slowing down one reaction can slow down others^[If nitrogen is limiting, it slows down production of amino acids, which slows down protein synthesis, which slows down growth or repair of myriad cell structures, and so on.]. 
-
-```{r, fig.margin = TRUE}
-knitr::include_graphics("liebigsbarrel.jpg")
-```
-
-What is important to remember is the rate of a reaction is limited by the reactant that is in the most limited supply. What this means is that if nitrogen is limiting, adding more phosphorus is unlikely to speed up the reaction(s). But it also means that adding nitrogen speeds up the reaction only until something else becomes limiting. This is often called Liebig's law of the minimum^[A prime example of [Stigler's law of eponymy](https://en.wikipedia.org/wiki/Stigler%27s_law_of_eponymy).] or Liebig's barrel, because, like the water level in a barrel is limited by the shortest stave, the growth of a plant or animal is limited by the nutrient in shortest supply. Me, I like to think about this as the law of the movie theater popcorn. Sure, a small popcorn is lovely and a medium increases my happiness, but I never get the super large size, even if it is just 50 cents more, because I know my happiness is no longer limited by popcorn, but probably by my need for water given all the salty popcorn I just ate!
-In any case, given this insight is it any surprise that one line of defense against invading pathogenic bacteria is for our bodies to sequester nutrients that likely limit bacterial growth?
-
-# An organism's stoichiometry can help explain where and when it flourishes 
-
-If we follow Liebig's law of the minimum a short step further, we might note that fertilizers, for instance, might be most effective if they included several of the commonly limiting nutrients. And they might be more effective still if they contained the right _ratios_ of these limiting nutrients. Why is this? Well in a word, stoichiometry.  In more words, chemical reactions use nutrients in particular ratios. For instance, photosynthesis takes six CO~2~ molecules and 12 H~2~O molecules, plus some light and fancy enzymes, to make one sugar (C~6~H~2~)~6~) and some oxygen and water. That is more O's than C's in this particular reaction. Similarly, while amino acids require nitrogen, they have a lot more carbon and oxygen atoms in them. 
-
-More broadly, we can think about _ecological_ stoichiometry, where we consider what the whole organism needs and uses, as opposed to particular chemical reactions. We need nitrogen not just for amino acids, but also RNA and DNA. We need phosphorus in our nucleic acids, but also phospholipids, and ATP, along with structural elements in bones. We can sort of set aside the issue of where the N's and P's go and just think about how many N's a body needs relative to the P's, and if we get this ratio right we tend to maximize the rates of the organisms's chemical reactions. 
-
-This ecological stoichiometry is a relatively new idea and undertaking, and it is not entirely clear how far we can run with it, but there are some very interesting places where it clearly works. For instance, rapid growth requires the production of a lot of nucleic acids, ATPs, and ribosomes, which require a lot of phosphorus. Thus, we find, at least in some settings like zooplankton, that fast-growing species and life stages tend to grow best with more P than N (or, equivalently, lower N:P ratios) than slower-growing species and stages. Indeed, lab experiments demonstrated that one could manipulate the relative dominance of copepods (cylopoid crustrations) versus _Daphnia_ (cladocerans) by changing the elemental ratios in the food they were provided. The ideas have been promoted in all sorts of areas (e.g., cancer research), but again, it is not always clear that what is true at the small scale is necessarily important at the large.
 
