--- a/ChemicalReactions.Rmd
+++ b/ChemicalReactions.Rmd
@@ -12,6 +12,7 @@ latexfonts:
 header-includes:
    - \usepackage{booktabs}
    - \usepackage{cancel}
+   - \usepackage[version=4]{mhchem}
 ---
 
 ```{r setup, include=FALSE}
@@ -46,88 +47,64 @@ What is important to remember is the rate of a reaction is limited by the reacta
 In any case, given this insight is it any surprise that one line of defense against invading pathogenic bacteria is for our bodies to sequester nutrients that likely limit bacterial growth?
 
 ## An organism's stoichiometry can help explain where and when it flourishes 
-
 If we follow Liebig's law of the minimum a short step further, we might note that fertilizers, for instance, might be most effective if they included several of the commonly limiting nutrients. And they might be more effective still if they contained the right _ratios_ of these limiting nutrients. Why is this? Well in a word, stoichiometry.  In more words, chemical reactions use nutrients in particular ratios. For instance, photosynthesis takes six CO~2~ molecules and 12 H~2~O molecules, plus some light and fancy enzymes, to make one sugar (C~6~H~2~)~6~) and some oxygen and water. That is more O's than C's in this particular reaction. Similarly, while amino acids require nitrogen, they have a lot more carbon and oxygen atoms in them. 
 
-More broadly, we can think about _ecological_ stoichiometry, where we consider what the whole organism needs and uses, as opposed to particular chemical reactions. We need nitrogen not just for amino acids, but also RNA and DNA. We need phosphorus in our nucleic acids, but also phospholipids, and ATP, along with structural elements in bones. We can sort of set aside the issue of where the N's and P's go and just think about how many N's a body needs relative to the P's, and if we get this ratio right we tend to maximize the rates of the organisms's chemical reactions. 
+More broadly, we can think about _ecological_ stoichiometry, where we consider what the whole organism needs and uses, as opposed to particular chemical reactions. We need nitrogen not just for amino acids, but also RNA and DNA. We need phosphorus in our nucleic acids, but also phospholipids, and ATP, along with structural elements in bones. We can sort of set aside the issue of where the N's and P's go and just think about how many N's a body needs relative to the P's, and if we get this ratio right we tend to maximize the rates of the organism's chemical reactions. 
 
-This ecological stoichiometry is a relatively new idea and undertaking, and it is not entirely clear how far we can run with it, but there are some very interesting places where it clearly works. For instance, rapid growth requires the production of a lot of nucleic acids, ATPs, and ribosomes, which require a lot of phosphorus. Thus, we find, at least in some settings like zooplankton, that fast-growing species and life stages tend to grow best with more P than N (or, equivalently, lower N:P ratios) than slower-growing species and stages. Indeed, lab experiments demonstrated that one could manipulate the relative dominance of copepods (cylopoid crustrations) versus _Daphnia_ (cladocerans) by changing the elemental ratios in the food they were provided. The ideas have been promoted in all sorts of areas (e.g., cancer research), but again, it is not always clear that what is true at the small scale is necessarily important at the large.
+This ecological stoichiometry is a relatively new idea and undertaking, and it is not entirely clear how far we can run with it, but there are some very interesting places where it clearly works. For instance, rapid growth requires the production of a lot of nucleic acids, ATPs, and ribosomes, which require a lot of phosphorus. Thus, we find, at least in some settings like zooplankton, that fast-growing species and life stages tend to grow best with more P than N (or, equivalently, lower N:P ratios) than slower-growing species and stages. Indeed, lab experiments demonstrated that one could manipulate the relative dominance of copepods (cylopoid crustations) versus _Daphnia_ (cladocerans) by changing the elemental ratios in the food they were provided. The ideas have been promoted in all sorts of areas (e.g., cancer research), but again, it is not always clear that what is true at the small scale is necessarily important at the large.
 
 Now, the new stuff!
 
-# Biology is temperature-dependent
-In addition to adding more of a limiting reactant, one way to increase the rate of a chemical reaction is to add heat. With heat, chemicals bounce around faster and so come into contact more frequently^[Hmm...is this a useful analogy with susceptible and infected hosts interacting to cause more infections? Let's revisit this later!]. The added energy also speeds reactions by providing the activation energy required in endothermic and even some ectothermic reactions. All of which is to say, reactions go faster at warmer temperatures. What are the consequences? Let's consider two:
+# Rates are controlled by conditions, too
 
-## Thermal optima
-```{r, fig.margin=TRUE,}
-r <- log(2)/10
-df <- tibble(Temperature = 10:50, 
-             Reaction = exp(r*Temperature), 
-             Stability = (30 - exp(0.00003*Temperature^3))/30, 
-             Rate = Reaction*Stability) 
+We have so far spent most of our thoughts on the _reactants_ of a chemical reaction, but the _conditions_ of the chemical reaction also matter a great deal. If you spend much time in a chemistry lab, you will realize that the conditions---from the cleanliness of the reaction vessel to the presence or absence of, say, oxygen to the temperature or pressure at which things are done---matter tremendously. The same is true for biochemical reactions that make up life. Let's start with the most obvious condition: temperature.
 
-ggplot(df, aes(Temperature, Reaction)) + 
-  geom_line(color = "blue", linetype = 2) + 
-  scale_y_continuous("Rate of enzymatic reaction") + 
-  coord_cartesian(ylim = c(0, max(df$Reaction))) + 
-  theme(axis.title.y.left = element_text(color = "blue"), 
-        axis.title.y.right = element_text(color = "red"))
+## Heat helps reactions along
+
+If I were to ask you how to increase the rate of a reaction, the two most common (and perhaps important) answers would be: 1) increase the concentration of the reactions (as we have mentioned a few times today) and 2) increase the temperature. Temperature provides energy that can make otherwise impossible reactions possible, slow reactions fast. This translates in a very real way to the observation that cold lizards are slow lizards while hot ones are fast. Or the fact that mosquitoes cannot function in the cold. Temperature, as we will learn, is a crucial factor for most of life. It affects population growth rates^[Think of bacteria or fungal pathogens growing in a temperature-dependent fashion.], distributional ranges, physiological responses including immune responses, and the outcomes of interactions. More on all of this later.
+
+## Water is key, too
+
+When we think of chemical reactions, we usually think of them happening in solution, so the water is just a given. But of course without water, many chemical reactions do _not_ work, and even if water is limiting the increase concentrations of chemicals in solution can cause problems. These issues are worse by 10 in living cells. Because cells are not simply test tubes or beakers; they are semi-permeable sacks made up of phospholipids and proteins. Stuff _leaks_ in and out! Things that should be in that sack over there get into this one here. Concentrations of things get all out of proportion. But even worse, cells can lose their structural integrity when there is not enough water or they are in a hyper-osmotic solution, where the water inside diffuses to the outside. Or they can explode if in a hypo-osmotic solution. So too much or too little water can be problematic^[Ignoring the myriad of physiological and structural mechanisms to maintain water balance]. 
+
+For plants, water is of course essential for nutrient transport from roots to shoots. But it is also important in photosynthesis for several reasons. Among the most consequential is that when plants open their stomata to let in \ce{CO2}, they inadvertently let out water. So in the process of making their photosynthetic reaction more efficient, by increasing the concentration of \ce{CO2}, they lose water. This trade-off is so important that it has led to the evolution, many times, of a more water-efficient form of photosynthesis called C4, as opposed to the normal C3, and even, in especially water restrictive environments, extra machinery called CAM photosynthesis^[My hope is that by continuing to mention it, you'll eventually ask to know more about these different types of photosynthesis]. 
+
+
+```{r, fig.margin = TRUE, fig.cap="A Whittaker biome diagram. Notice what's on the axes that organize the biomes?"}
+knitr::include_graphics("WhittakerDiagram.jpg")
 ```
 
-Rates of chemical reactions increase _exponentially_ with temperature^[If you wonder why, look up the [Arrhenius equation](https://www.chemguide.co.uk/physical/basicrates/arrhenius.html)...yet another exponential model, but this one describes the "rate constant" of a chemical reaction.]. As a quick rule of thumb, if the temperature is increased by 10$^\circ C$, the rate of the reaction often doubles. So the rate of reactions, even enzymatic reactions such as those involved in metabolism or muscle contractions or most any other biochemical process, tends to increase like the blue line on the graph to the right.
-
-```{r, fig.margin=TRUE}
-ggplot(df, aes(Temperature, Stability*30)) + 
-  geom_line(color = "red", linetype = 2) + 
-  scale_y_continuous("", sec.axis = sec_axis(~ . /30, name = "Proportion enzyme active")) + 
-  theme(axis.title.y.left = element_text(color = "blue"), 
-        axis.title.y.right = element_text(color = "red"))
-```
-
-Your intuition is probably quietly screaming at you right now, saying, "yeah, but...!" And your intuition is right. This accelerating relationship between the rate of a reaction and temperature cannot go on forever. At some point, everything catches on fire and you get soot rather than a muscle contraction, right? Well, well before that we run into limits. Most biochemical reactions involve enzymes and enzymes eventually fall apart or "denature." (The same can happen to some of the chemical reactants, too.) We might graph the rate of denaturing as the red line on the graph to the right. 
-
-```{r, fig.margin=TRUE}
-ggplot(df, aes(Temperature, Rate)) + 
-  geom_line() + 
-  geom_line(aes(y=Reaction), color = "blue", linetype = 2) + 
-  geom_line(aes(y=Stability*30), color = "red", linetype = 2) + 
- scale_y_continuous("Rate of enzymatic reaction", 
-                    sec.axis = sec_axis(~ . /30, 
-                                        name = "Proportion enzyme active")) + 
-  labs(title = "Overall rate of enzymatic reaction") + 
-  coord_cartesian(ylim = c(0, max(df$Reaction))) + 
-  theme(axis.title.y.left = element_text(color = "blue"), 
-        axis.title.y.right = element_text(color = "red")) 
-```
-
-When we put these rates together we get an overall rate of the reaction, with a clear peak. This peak is the "optimal" temperature in that it maximizes the overall rate for that reaction. What is striking is that the optimal temperature for many biochemical reactions in an organism are pretty similar^[Why would that be? Consider what would happen if they were all very different.]. What this means is that a organisms tend to have thermal optimums that relate to these biochemical optimums. Running speed of a lizard? Yes, it has a thermal optimum. A mosquito digesting a bloodmeal? That, too, happens fastest at a particular temperature. Most all of biology has some small-ish range of temperatures where we perform best. We humans often do not think about this simply because our physiology works so hard to maintain our body temperature very near our thermal optimum.  But trust me, if our core temperature drops a bit, so does our metabolism, just as we would expect^[This also hints at a secret weapon of ectothermic poikilotherms, those things like amphibians and reptiles and some fish that not only get most of their heat from the world around them, but can let their body temperature vary a great deal: they can regulate their metabolism by changing their body temperature. Not food? Why not cool off and wait it out? We ridiculous endothermic homeotherms cannot pull off _that_ trick!]. 
-
-So why do organisms have narrower ranges of temperatures in which they thrive compared to what they can survive? Look to the thermal optima of their chemical reactions^[I am overselling this a bit. While the logic holds and there are many examples of temperature-dependent processes from the small (e.g., metabolism) to the large (e.g., speed), there are many other factors that end up affecting temperature-function relationships at the organism level, such as compensatory adaptations to nutrition. That is, we need to be cautious about scaling up these mechanisms to far without some care.]! 
-
-## Temperature-dependent rates of development
-Temperature-dependent rates and thermal optima also extend to development. Consider the process of going from an egg to a hatchling to a juvenile to an awkward, gangly pubescent teenager equivalent to a mature adult, or similarly a seed to seedling to small tree to mature tree. All of these steps are the result of a series of chemical reactions. Because these reactions tend to go faster at warmer temperatures, the time it takes to get to a particular developmental milestone (e.g., hatching or sprouting) tends to be shorter at warmer temperatures^[Yes, only up to a point.]. And while these rates increase more-or-less exponentially over a wide range of temperatures, most organisms do not live, or at least develop, over a terribly wide range of temperatures. Over this narrower range we might be forgiven for thinking that the rate is sort of linear. Let's run with this linear relationship between temperature and rates of development. What are the consequences? 
-```{r, fig.margin=TRUE, fig.cap="Time to eclosion (hatching) for black legged ticks. From Ogden et al. 2004. Journal of Medical Entomology 41:622-633." }
-knitr::include_graphics("DaysEcolosion.png", dpi=400)
-```
-
-First, if we were to raise, say, ticks or mosquitoes from eggs at one of a range of temperatures, we would see that the time to some developmental milestone declines rapidly with increasing temperature at first, but that change slows down. Indeed, this is a hyperbolic relationship where the time to the milestone is just one over the rate of development, which we just noted increases approximately linearly with temperature. That is, $T = 1/d_t$, where $d_t$ is the development rate at temperature $t$ and $T$ is the time to the milestone. Clear? No? OK, let's try an analogy.
-
-Imagine you are driving to the West Side. Let's say it is a 300 mile journey. You could drive the whole way at 60 miles per hour and it would take 300 miles/60 mph = 5 hours or you could drive at 90 mph and it would take  300 miles/90 mph = 3 hours 20 minutes. I you are a very slow driver moving at 30 mph this trip would take 10 hours! A graph of the time it takes to get to your destination, your milestone if you will, follows the same shape as the development graph, above. 
-
-```{r, fig.margin=TRUE, fig.cap="Time to drive to the West Side as a function of speed."}
-
-df <- tibble(Speed = 10:100, 
-             Time = 300/Speed)
-ggplot(df, aes(Speed, Time)) + 
-  geom_line() + 
-  geom_point(data=df %>% filter(Speed %in% c(60,90,30))) + 
-  scale_x_continuous("Speed (miles per hour)", breaks = c(30,60,90)) + 
-  scale_y_continuous("Time (hours)", lim = c(0, 30))
-
-```
+Moreover, if you tell me the temperature and precipitation in a place, I can probably tell you what sorts of plants grow there, and thus what it looks like, what the animals might be like, and so on. These two variables---temperature and moisture---are hugely important for all organisms, but especially plants. 
 
 
-This analogy is important for another reason, because it helps us notice that we do not need to drive (or develop) at a constant rate, but rather accumulate speed (or temperature) and thus miles driven (or steps in development) to get to our destination. We might drive at 60 for a bit while we get through Colfax and then floor it on I-90 until we get snarled in traffic near Seattle. Similarly, development might be speeding along on warm days and going slower on cools ones. In biology we call this the "degree-day" model of development^[Sort of like the speed-hour model of travel], where we can estimate the accumulation of temperature as a proxy for the accumulation of development to some developmental milestone. 
 
-This sort of model is very common in farming, but is also very useful for thinking vector ecology. Ticks and mosquitoes take a certain number of degree days^[Often above some threshold temperature where there is no development. Zero Celsius is pretty cold, after all!] to complete their development into the next developmental stage, lay eggs, or even digest a bloodmeal. What's cool about this is that we can figure out how many generations we might have in an area as a function of that area's typical temperatures. It can even explain why, say, ticks are not found too far north: it is simply too cold for them to complete their development before they would run out of energy or freeze to death. 
 
+## What about \ce{O2}?
+
+There are many other important conditions that govern the rates of chemical reactions, and thus life, but the third major one is oxygen concentrations. This is tricky, to a degree, because it is also a nutrient of sorts for most life^[Remember CHNOPS?]. However, for some organisms \ce{O2} is not a resource that is used, but rather a nuisance that keeps their chemical reactions, including those involved in metabolism, from working right. Many specialized bacteria work best under anoxic conditions---when free \ce{O2} is not available, but chemically bound oxygen, such as in \ce{NO3-}. For instance, the denitrification process occurs when free oxygen is not available and so denitrifying bacteria use the oxygen in \ce{NO2-} and \ce{NO3-} for electron acceptors. In these and many other cases, oxygen is essentially toxic to the anaerobic or fermenting microbes^[Anoxic refers to the conditions; anaerobic to the metabolic processes used.]. Other times, the rates of reactions, including the nitrogen fixation process, are governed by oxygen concentrations. 
+
+And of course, from the flip side, aerobic organisms such as ourselves do poorly when oxygen concentrations drop. But wait! In our case, the \ce{O2} is a reactant, or more broadly a resource. What is the difference?
+
+# Resources vs. conditions
+
+This last example led to a tricky situation where sometimes oxygen was  considered a resource and sometimes it was treated as a condition. So what is the distinction? 
+
+Let me give you a few things to categorize as either resource or condition (or both!). I think you won't have too much trouble with it. But then think about what characterizes one list vs. the other. 
+
+* pH
+* Nitrogen
+* Phosphorus
+* Sunlight
+* Water
+* Oxygen
+* Salinity
+* Shade
+* Hole or crevice
+* Soil type (e.g., sand, clay, etc.)
+* Fire (risk or frequency)
+* Waves or tides
+* Humidity
+* Temperature
+
+
+**Resources**      \hspace{7cm} **Conditions**
